--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,6 @@
 ---
+import Default from '../layouts/default.astro'
 ---
-<html lang="en">
-
-<head>
-	<meta charset="utf-8" />
-	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-	<meta name="viewport" content="width=device-width" />
-	<title>Welcome to Astro</title>
-</head>
-
-<body>
-	<h1>Welcome to <a href="https://astro.build/">Astro</a></h1>
-</body>
-
-</html>
+<Default title="Studio Scholz">
+  <h1>Hello, world!</h1>
+</Default>
