--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -1,7 +1,22 @@
 ---
 const { title } = Astro.props
 import Header from '../components/Header.jsx'
-import { Sheet } from '$/stitches.config.ts'
+import { Sheet, css } from '$/stitches.config.ts'
+
+const contentStyles = css({
+  padding: '0 $6',
+  maxWidth: 'var(--content-width)',
+  margin: '0 auto'
+
+})
+
+const footerStyles = css({
+  margin: 'auto auto 0 auto',
+  padding: '$6',
+  fontSize: 12,
+  width: '100%',
+  maxWidth: 'var(--content-width)'
+})
 ---
 
 <html lang="en">
@@ -9,23 +24,18 @@ import { Sheet } from '$/stitches.config.ts'
     <meta charset="utf-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="{Astro.resolve('../styles/global.css')}">
+    <link rel="stylesheet" href="{Astro.resolve('../styles/index.css')}">
     <title>{title}</title>
   </head>
-  <body>
+  <body class="dark-theme">
     <Header title="Studio Scholz" client:load />
-    <div class="content">
+    <div class={`${contentStyles()} content`}>
       <slot />
     </div>  
     <Sheet />
+    <footer class={footerStyles()}>
+      <span>Last edited 11/2/2021</span>
+      <p>Studio Scholz, Idastr. 13, 81479 Munich</p>
+    </footer>
   </body>
 </html>
-
-
-<style>
-.content {
-  padding: 0 var(--spacing-3);
-  max-width: var(--content-width);
-  margin: 0 auto;
-}
-</style>
