--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,21 +1,17 @@
-@import "./reset.css";
-@import "./fonts.css";
-@import "./variables.css";
-
-@import "@radix-ui/colors/slateDark.css";
-@import "@radix-ui/colors/slate.css";
-@import "@radix-ui/colors/skyDark.css";
-@import "@radix-ui/colors/sky.css";
-
 html {
   font-size: 16px;
 }
 
 body {
-  background: var(--sky1);
+  background: var(--indigo1);
   color: var(--slate12);
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: var(--text-base);
+  min-height: 100vh;
+  letter-spacing: 0.015rem;
+  -webkit-font-smoothing: antialiased;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
 }
 
@@ -33,15 +29,14 @@ h2 {
 }
 
 .content p {
-  margin-top: 1.5rem;
+  margin-top: var(--spacing-5);
   line-height: var(--leading-base);
 }
 
 .content a {
   text-decoration: underline;
-  color: var(--slate11);
 }
 
 .content a:hover {
-  color: var(--slate12);
+  /* color: var(--slate12); */
 }
