--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Default from '$/layouts/default.astro'
+import Default from '@/layouts/default.astro'
 import { Markdown } from 'astro/components';
 
 const content = Astro.fetchContent('../content/index.md');
