--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -11,5 +11,6 @@ html:root {
   --spacing-3: 0.75rem;
   --spacing-4: 1rem;
   --spacing-5: 1.25rem;
+  --spacing-6: 1.5rem;
   --transparent: transparent;
 }
