--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,3 @@
-@import "@radix-ui/colors/slateDark.css";
-@import "@radix-ui/colors/slate.css";
-@import "@radix-ui/colors/indigoDark.css";
-@import "@radix-ui/colors/indigo.css";
-
-@import "./reset.css";
-@import "./fonts.css";
-@import "./variables.css";
-@import "./global.css";
+@import './reset.css';
+@import './variables.css';
+@import './global.css';
