fix: legal notice

--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -38,7 +38,7 @@ const footerStyles = css({
     <!-- <Sheet /> -->
     <footer class={`${footerStyles()} footer`}>
       <span>Last edited 12/6/2021</span>
-      <p>Studio Scholz, Idastr. 13, 81479 Munich</p>
+      <p>Robin Scholz, Idastr. 13, 81479 Munich</p>
     </footer>
   </body>
 </html>
